Add date field handling and add to forms

--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -186,7 +186,7 @@
 
 <% define_template "chronology_item" do |form, item| %>
   <div class="subrecord-form-fields" data-type="chronology_item">
-    <%= form.label_and_textfield "event_date" %>
+    <%= form.label_and_date "event_date" %>
     <div class="control-group">
       <label class="control-label">Event Details</label>
       <div class="controls">
