--- a/frontend/app/views/rights_statements/_template.html.erb
+++ b/frontend/app/views/rights_statements/_template.html.erb
@@ -1,19 +1,19 @@
 <% define_template "rights_statement" do |form| %>
   <div class="subrecord-form-fields">
     <%= form.label_and_textfield "identifier" %>
-    <%= form.label_and_textfield "rights_type" %>
-    <%= form.label_and_textfield "active" %>
+    <%= form.label_and_select "rights_type", form.jsonmodel_options_for(:rights_statement, "rights_type") %>
+    <%= form.label_and_boolean "active" %>
     <%= form.label_and_textfield "materials" %>
-    <%= form.label_and_textfield "ip_status" %>
-    <%= form.label_and_textfield "ip_expiration_date" %>
+    <%= form.label_and_select "ip_status", form.jsonmodel_options_for(:rights_statement, "ip_status") %>
+    <%= form.label_and_date "ip_expiration_date" %>
     <%= form.label_and_textfield "license_identifier_terms" %>
     <%= form.label_and_textfield "statute_citation" %>
     <%= form.label_and_textfield "jurisdiction" %>
     <%= form.label_and_textfield "type_note" %>
     <%= form.label_and_textfield "permissions" %>
     <%= form.label_and_textfield "restrictions" %>
-    <%= form.label_and_textfield "restriction_start_date" %>
-    <%= form.label_and_textfield "restriction_end_date" %>
+    <%= form.label_and_date "restriction_start_date" %>
+    <%= form.label_and_date "restriction_end_date" %>
     <%= form.label_and_textfield "granted_note" %>
 
     <div class="subrecord-form-container">
