--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -229,7 +229,7 @@
   </div>
 <% end %>
 
-<section id="notes" class="subrecord-form">
+<section id="<%= form.id_for("notes")%>" class="subrecord-form">
   <h3 class="subrecord-form-heading">
     Notes
     <div class="btn-group pull-right">
