--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -4,7 +4,7 @@
   <%= form_context :accession, @accession.to_hash(true) do |form| %>
     <div class="row-fluid">
       <div class="span3">
-        <%= render :partial => "sidebar", :locals => {:form => form} %>
+        <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
         <h2><%= @accession.title%> <span class="label label-info">Accession</span></h2>
