--- a/frontend/app/views/archival_objects/_new_inline.html.erb
+++ b/frontend/app/views/archival_objects/_new_inline.html.erb
@@ -2,7 +2,7 @@
   <%= form_context :archival_object, @archival_object.to_hash(true) do |form| %>
     <div class="row-fluid">
       <div class="span3">
-        <%= render :partial => "sidebar", :locals => {:form => form} %>
+        <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
         <%= render :partial => "archival_objects/form_container", :locals => {:form => form} %>
