--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -2,7 +2,7 @@
   <%= form_context :resource, @resource.to_hash(true) do |form| %>
     <div class="row-fluid">
       <div class="span3">
-        <%= render :partial => "resources/sidebar", :locals => {:form => form} %>
+        <%= render :partial => "resources/sidebar" %>
       </div>
       <div class="span9 record-pane">
          <%= render :partial => "resources/form_container", :locals => {:form => form} %>
