--- a/frontend/app/views/resources/new.html.erb
+++ b/frontend/app/views/resources/new.html.erb
@@ -4,7 +4,7 @@
   <%= form_context :resource, @resource.to_hash(true) do |form| %>
     <div class="row-fluid">
        <div class="span3">
-          <%= render :partial => "resources/sidebar", :locals => {:form => form} %>
+          <%= render :partial => "resources/sidebar" %>
        </div> <!-- span3 -->
        <div class="span9 record-pane" id="object_container">
 
