Fix notes on resources (after screwing with IDs.. oops)

--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -86,7 +86,7 @@
                 </select>
               </li>
               <li class="form-actions">
-                <button class="btn btn-small btn-primary add-sub-note-btn">Add Sub Note</button>
+                <button class="btn btn-small add-sub-note-btn">Add Sub Note</button>
               </li>
             </ul>
           </div>
@@ -229,7 +229,7 @@
   </div>
 <% end %>
 
-<section id="<%= form.id_for("notes")%>" class="subrecord-form">
+<section id="notes" class="subrecord-form">
   <h3 class="subrecord-form-heading">
     Notes
     <div class="btn-group pull-right">
@@ -243,7 +243,7 @@
           </select>
         </li>
         <li class="form-actions">
-          <button class="btn btn-small btn-primary add-note-for-type-btn">Add Note</button>
+          <button class="btn btn-small add-note-for-type-btn">Add Note</button>
         </li>
       </ul>
     </div>
