--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" or @resource.notes.length > 0 %>
-      <li><a href="#resource_notes_">Notes <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#notes">Notes <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <li><a href="#resource_extents_">Extents <span class="icon-chevron-right"></span></a></li>
