--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -21,7 +21,7 @@
     <% end %>
 
     <% if not controller.action_name === "show" or @resource.instances.length > 0 %>
-      <li><a href="#instances">Instances <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#resource_instances_">Instances <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" %>
