--- a/frontend/app/views/instances/_template.html.erb
+++ b/frontend/app/views/instances/_template.html.erb
@@ -1,17 +1,4 @@
-<% define_template "container" do |form| %>
-  <section>
-    <h4 class="subrecord-form-heading">Container</h4>
-    <div class="container-form-fields">
-      <%= form.label_and_textfield "type_1" %>
-      <%= form.label_and_textfield "indicator_1" %>
-      <%= form.label_and_textfield "barcode_1" %>
-      <%= form.label_and_textfield "type_2" %>
-      <%= form.label_and_textfield "indicator_2" %>
-      <%= form.label_and_textfield "type_3" %>
-      <%= form.label_and_textfield "indicator_3" %>
-    </div>
-  </section>
-<% end %>
+<%= render :partial => "container/template" %>
 
 <% define_template "instance" do |form| %>
   <div class="subrecord-form-fields">
