WIP: add missing files from the instance merge

--- a/frontend/app/views/extents/_show.html.erb
+++ b/frontend/app/views/extents/_show.html.erb
@@ -1,4 +1,8 @@
-<section id="extents">
+<%
+   section_id = "extents" if section_id.blank?
+%>
+
+<section id="<%= section_id %>">
   <h3>Extents</h3>
   <div class="accordion details" id="extent_accordion">
     <% extents.each_with_index do | extent, index | %>
