--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -43,19 +43,19 @@
     <%= render :partial => "extents/show", :locals => { :extents => @resource.extents, :section_id => "resource_extents_" } %>
 
     <% if @resource.dates.length > 0 %>
-      <%= render :partial => "dates/show", :locals => { :dates => @resource.dates } %>
+      <%= render :partial => "dates/show", :locals => { :dates => @resource.dates, :section_id => "resource_dates_"  } %>
     <% end %>
 
     <% if @resource.external_documents.length > 0 %>
-      <%= render :partial => "external_documents/show", :locals => { :external_documents => @resource.external_documents } %>
+      <%= render :partial => "external_documents/show", :locals => { :external_documents => @resource.external_documents, :section_id => "resource_external_documents_"  } %>
     <% end %>
 
     <% if @resource.rights_statements.length > 0 %>
-      <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @resource.rights_statements } %>
+      <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @resource.rights_statements, :section_id => "resource_rights_statements_"  } %>
     <% end %>
 
     <% if @resource.instances.length > 0 %>
-      <%= render :partial => "instances/show", :locals => { :instances => @resource.instances } %>
+      <%= render :partial => "instances/show", :locals => { :instances => @resource.instances, :section_id => "resource_instances_"  } %>
     <% end %>
 
   </div>
