--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -230,6 +230,7 @@ section h3 {
 /* AGENT NAME Form styles */
 .subrecord-form-dummy,
 .subrecord-form {
+  clear: both;
   margin: 20px 0;
   background-color: #FAFAFA;
   .box-shadow(~"1px 1px 3px rgba(0, 0, 0, 0.25)");
