Refactor subject form to use new form helper

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -114,6 +114,10 @@ section h3 {
 
 #new_subject .terms-container .row-fluid {
   margin-bottom: 5px;
+
+  .control-group {
+    padding: 0;
+  }
 }
 
 .inputs-fill-it-up input,
