Setup linker to link Container Locations to Locations; Refactor linker widget to handle multiplicity of one and use path form new form helper

--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -146,6 +146,6 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   background: #BEEBFF;
 }
 
-li.token-input-input-token {
+.linker-wrapper.multiplicity-many li.token-input-input-token {
   min-height: 28px;
 }
