--- a/frontend/app/views/archival_objects/forms/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/forms/_basic_information.html.erb
@@ -1,3 +1,3 @@
 <%= form.label_and_textfield "title" %>
 <%= form.label_and_textfield "ref_id" %>
-<%= render :partial => "subjects/linker", :locals => { :object => @archival_object }%>
+<%= render :partial => "subjects/linker", :locals => { :form => form }%>
