--- a/frontend/app/views/container_locations/_template.html.erb
+++ b/frontend/app/views/container_locations/_template.html.erb
@@ -4,5 +4,6 @@
     <%= form.label_and_date "start_date" %>
     <%= form.label_and_date "end_date" %>
     <%= form.label_and_textarea "note" %>
+    <%= render :partial => "locations/linker", :locals => { :form => form }%>
   </div>
 <% end %>
