--- a/frontend/app/views/resources/forms/_basic_information.html.erb
+++ b/frontend/app/views/resources/forms/_basic_information.html.erb
@@ -1,3 +1,3 @@
 <%= form.label_and_textfield "title" %>
 <%= form.label_and_fourpartid %>
-<%= render :partial => "subjects/linker", :locals => { :object => @resource }%>
+<%= render :partial => "subjects/linker", :locals => { :form => form }%>
