--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -6,13 +6,13 @@
           <input type="text" class="linker" 
             data-object_class="subject" 
             data-controller="subjects" 
-            data-name="Subject" 
-            data-name_plural="Subjects" 
-            data-owner_class="<%= object.class.record_type %>" 
-            data-owner_attribute="subjects" 
+            data-label="Subject"
+            data-label_plural="Subjects"
+            data-path="<%= form.path %>"
+            data-name="subjects"
             data-url="<%= url_for :controller => :subjects, :action => :list, :format => :json %>" 
-            data-selected='<%= object['subjects'].blank? ? "[]" : object['resolved']['subjects'].collect {|s| Subject.from_hash(s)}.to_json %>' 
-            data-format="${display_string}" 
+            data-selected='<%= form.obj['subjects'].blank? ? "[]" : form.obj['resolved']['subjects'].collect {|s| Subject.from_hash(s)}.to_json %>'
+            data-format_property="display_string"
           />
           <div class="btn-group">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
