Fix creation of location via the linker widget.. and replace the existing token if creating a new one via the widget

--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -87,7 +87,7 @@
    {/if}
 --></div>
 <div id="linker_selectedtoken_template"><!--
-   <li>
+   <li id="${item.id.replace(/\//g,'_')}">
       <input type="hidden" name="${config.path}[resolved][${config.name}]{if config.multiplicity != 'one'}[]{/if}" />
       <input type="hidden" name="${config.path}[${config.name}]{if config.multiplicity != 'one'}[]{/if}" value="${item.id}" />
       ${item.name}
