--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -4,62 +4,67 @@
       <%= render :partial => "sidebar" %>
    </div>
    <div class="span9 record-pane">
-     <% if user_can?('update_repository') %>
-        <div class="btn-group" style="float: right">
-          <%= link_to "Edit", {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn" %>
-        </div>
-      <% end %>
-      <h2><%= @accession.title %> <span class="label label-info">Accession</span></h2>
-
-      <section id="basic_information">
-        <h3>Basic Information</h3>
-
-        <div class="row-fluid label-and-value">
-           <div class="span3">Identifier</div>
-           <div class="span9"><%= @accession.id %></div>
-        </div>
-        <div class="row-fluid label-and-value">
-           <div class="span3">Accession Date</div>
-           <div class="span9"><%= Date.strptime(@accession.accession_date, "%Y-%m-%d") %></div>
-        </div>
-        <div class="row-fluid label-and-value">
-           <div class="span3">Content Description</div>
-           <div class="span9"><%= @accession.content_description %></div>
-        </div>
-        <div class="row-fluid label-and-value">
-           <div class="span3">Condition Description</div>
-           <div class="span9"><%= @accession.condition_description %></div>
-        </div>
-        <% if not @accession.subjects.blank? %>
-        <hr/>
-        <div class="row-fluid label-and-value">
-           <div class="span3">Subjects</div>
-           <div class="span9">
-              <% @accession["resolved"]["subjects"].each do | subject | %>
-                 <div class="token">
-                    <%= Subject.from_hash(subject).display_string %>
-                 </div>
-              <% end %>
-           </div>
-        </div>
+     <%= readonly_context :accession, @accession.to_hash(true) do |readonly| %>
+       <% if user_can?('update_repository') %>
+          <div class="btn-group" style="float: right">
+            <%= link_to "Edit", {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn" %>
+          </div>
         <% end %>
-      </section>
+        <h2><%= @accession.title %> <span class="label label-info">Accession</span></h2>
 
-     <% if @accession.extents.length > 0 %>
-       <%= render :partial => "extents/show", :locals => { :extents => @accession.extents, :section_id => "accession_extents_" } %>
+        <section id="basic_information">
+          <h3>Basic Information</h3>
+
+          <div class="row-fluid label-and-value">
+             <div class="span3">Identifier</div>
+             <div class="span9"><%= @accession.id %></div>
+          </div>
+          <div class="row-fluid label-and-value">
+             <div class="span3">Accession Date</div>
+             <div class="span9"><%= Date.strptime(@accession.accession_date, "%Y-%m-%d") %></div>
+          </div>
+          <div class="row-fluid label-and-value">
+             <div class="span3">Content Description</div>
+             <div class="span9"><%= @accession.content_description %></div>
+          </div>
+          <div class="row-fluid label-and-value">
+             <div class="span3">Condition Description</div>
+             <div class="span9"><%= @accession.condition_description %></div>
+          </div>
+          <% if not @accession.subjects.blank? %>
+          <hr/>
+          <div class="row-fluid label-and-value">
+             <div class="span3">Subjects</div>
+             <div class="span9">
+                <% @accession["resolved"]["subjects"].each do | subject | %>
+                   <div class="token">
+                      <%= Subject.from_hash(subject).display_string %>
+                   </div>
+                <% end %>
+             </div>
+          </div>
+          <% end %>
+        </section>
+
+       <% if @accession.extents.length > 0 %>
+         <%= render :partial => "extents/show", :locals => { :extents => @accession.extents, :section_id => "accession_extents_" } %>
+       <% end %>
+
+        <% if @accession.dates.length > 0 %>
+          <%= render :partial => "dates/show", :locals => { :dates => @accession.dates, :section_id => "accession_dates_" } %>
+        <% end %>
+
+        <% if @accession.external_documents.length > 0 %>
+          <%= render :partial => "external_documents/show", :locals => { :external_documents => @accession.external_documents, :section_id => "accession_external_documents_" } %>
+        <% end %>
+
+       <% if @accession.rights_statements.length > 0 %>
+         <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @accession.rights_statements, :section_id => "accession_rights_statements_" } %>
+       <% end %>
+
+       <% if @accession.deaccessions.length > 0 %>
+         <%= render :partial => "deaccessions/show", :locals => { :deaccessions => @accession.deaccessions, :context => readonly } %>
+       <% end %>
      <% end %>
-
-      <% if @accession.dates.length > 0 %>
-        <%= render :partial => "dates/show", :locals => { :dates => @accession.dates, :section_id => "accession_dates_" } %>
-      <% end %>
-
-      <% if @accession.external_documents.length > 0 %>
-        <%= render :partial => "external_documents/show", :locals => { :external_documents => @accession.external_documents, :section_id => "accession_external_documents_" } %>
-      <% end %>
-
-     <% if @accession.rights_statements.length > 0 %>
-       <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @accession.rights_statements, :section_id => "accession_rights_statements_" } %>
-     <% end %>
-
    </div>
 </div>
