--- a/frontend/app/views/extents/_show.html.erb
+++ b/frontend/app/views/extents/_show.html.erb
@@ -4,11 +4,11 @@
 
 <section id="<%= section_id %>">
   <h3>Extents</h3>
-  <div class="accordion details" id="extent_accordion">
+  <div class="accordion details" id="<%= section_id %>_accordion">
     <% extents.each_with_index do | extent, index | %>
       <div class="accordion-group">
         <div class="accordion-heading">
-          <div class="row-fluid accordion-toggle collapsed" data-toggle="collapse" data-parent="#extent_accordion" href="#extent_<%= index %>">
+          <div class="row-fluid accordion-toggle collapsed" data-toggle="collapse" data-parent="#<%= section_id %>_accordion" href="#<%= section_id %>_extent_<%= index %>">
             <div class="span1">
               <span class="icon-chevron-right"></span>
               <span class="icon-chevron-down"></span>
@@ -22,7 +22,7 @@
             </div>
           </div>
         </div>
-        <div id="extent_<%= index %>" class="accordion-body collapse">
+        <div id="<%= section_id %>_extent_<%= index %>" class="accordion-body collapse">
           <div class="row-fluid label-and-value">
             <div class="span3 offset1" ><%= I18n.t('extent.portion') %></div>
             <div class="span8"><%= I18n.t('extent.portion_'+extent["portion"]) %></div>
