WIP add Instances to Archival Objects

--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -19,6 +19,6 @@
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
-
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "instances"} %>
 
 </fieldset>
