--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -18,6 +18,11 @@
       <li><a href="#archival_object_rights_statements_">Rights Statements <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if not controller.action_name === "show" or @archival_object.instances.length > 0 %>
+      <li><a href="#archival_object_instances_">Instances <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary">Save Archival Object</button>
