Scroll back the top of the Resource/Component page after submitting the form

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -94,8 +94,10 @@ $(function() {
           form_changed = false;
           rerenderTree(function() {
             $container.triggerHandler("submitted", {success: true});
-          });                
+          });
         }
+        // scroll back to the top
+        $("header").ScrollTo();
       }, 
       error: function(obj, errorText, errorDesc) {
         $container.triggerHandler("submitted", {success: false});
