--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -2,18 +2,30 @@
 <% if @exceptions %>
    <script>
      $(function () {
+
+       var setupErrorMessage = function(idx, elt, type) {
+         $("#" + elt).parents(".control-group").addClass(type);
+         $("." + type + "[data-target=" + elt + "]").click(function() {
+           $("#" + elt).ScrollTo({
+            callback: function() {
+              $("#" + elt).focus();
+            }
+           });
+         });
+       };
+
        var _errors = <%= form.exceptions_for_js(@exceptions) %>;
 
        var callback = function () {
          if (_errors.errors) {
            $(_errors.errors).each(function (idx, elt) {
-             $("#" + elt).parents(".control-group").addClass("error");
+             setupErrorMessage(idx, elt, "error");
            });
          }
 
          if (_errors.warnings) {
            $(_errors.warnings).each(function (idx, elt) {
-             $("#" + elt).parents(".control-group").addClass("warning");
+             setupErrorMessage(idx, elt, "warning");
            });
          }
        };
@@ -28,7 +40,7 @@
          <% @exceptions[:errors].each do |attr, messages| %>
             <div class="errors-for-attribute">
               <% messages.each do |msg| %>
-                <div class="error"><%= I18n.t(form.path_to_i18n_key(attr)) %> - <%= msg %></div>
+                <div class="error" data-target="<%= form.id_for_javascript(attr) %>"><%= I18n.t(form.path_to_i18n_key(attr)) %> - <%= msg %></div>
               <% end %>
             </div>
          <% end %>
@@ -39,7 +51,7 @@
          <% @exceptions[:warnings].each do |attr, messages| %>
             <div class="warnings-for-attribute">
               <% messages.each do |msg| %>
-                <div class="warning"><%= I18n.t(form.path_to_i18n_key(attr)) %> - <%= msg %></div>
+                <div class="warning" data-target="<%= form.id_for_javascript(attr) %>"><%= I18n.t(form.path_to_i18n_key(attr)) %> - <%= msg %></div>
               <% end %>
             </div>
          <% end %>
