--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -170,17 +170,17 @@ section h3 {
   float: right;
   margin-top: 2px;
   margin-right: -6px;
-  opacity: .25;
+  .opacity(25);
 }
 .as-nav-list > li > a:hover {
   background-color: #f5f5f5;
 }
 .as-nav-list a:hover .icon-chevron-right {
-  opacity: .5;
+  .opacity(50);
 }
 .as-nav-list .active .icon-chevron-right,
 .as-nav-list .active a:hover .icon-chevron-right {
-  opacity: 1;
+  .opacity(100);
 }
 .as-nav-list.affix {
   //top: 40px;
@@ -321,4 +321,19 @@ section h3 {
 
 .subrecord-form textarea {
   width: 90%;
+}
+
+.form-messages {
+  .linked-to-field {
+    cursor: pointer;
+    .icon-chevron-down {
+      .opacity(25);
+      margin-left: 5px;
+    }
+    &:hover {
+      .icon-chevron-down {
+        .opacity(50);
+      }
+    }
+  }
 }
